--- a/SpMVC_BlogDBV2/src/main/webapp/static/css/main.css
+++ b/SpMVC_BlogDBV2/src/main/webapp/static/css/main.css
@@ -31,7 +31,7 @@ header{
     text-align: center;
     padding: 1.5rem;
 
-    background-image: url("../images/이탈리아.png");
+    background-image: url("../images/unnamed.jpg");
     background-repeat: no-repeat;
     background-position: center;
 
