--- a/SpMVC_ShopV1/src/main/webapp/WEB-INF/views/component/product/product_write.jspf
+++ b/SpMVC_ShopV1/src/main/webapp/WEB-INF/views/component/product/product_write.jspf
@@ -9,12 +9,13 @@
             <div><label>상품이름</label><input name="p_name" id="p_name" /></div>
             <div><label>주매입처</label><input name="p_dcode" id="p_dcode" /></div>
             <div><label>상품규격</label><input name="p_std" id="p_std" /></div>
-            <div><label>매입가격</label><input name="p_iprice" id="p_iprice" /></div>
-            <div><label>판매가격</label><input name="p_oprice" id="p_oprice" /></div>
-            <div><label>대표이미지</label><input type="file" name="p_image" id="p_image" /></div>
+            <div><label>매입가격</label><input type="number" name="p_iprice" id="p_iprice" /></div> <!-- 타입 넘버 주면 위아래버튼 생김 -->
+            <div><label>판매가격</label><input type="number" name="p_oprice" id="p_oprice" /></div>
+            <div><label>대표이미지</label><input type="file"  id="p_image" /></div>
+            
             <div id="btn_box">
                 <button type="button">리스트</button>
-                <button type="button">저장</button>
+                <button type="submit">저장</button>
             </div>
         </fieldset>
     </form>
