--- a/SpMVC_ShopV2/src/main/webapp/WEB-INF/views/component/product/product_detail.jspf
+++ b/SpMVC_ShopV2/src/main/webapp/WEB-INF/views/component/product/product_detail.jspf
@@ -1,52 +1,129 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
 <%@taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
 <c:set var="rootPath" value="${pageContext.request.contextPath}" />
-    <style>
-    
-      section {
-        display: flex;
-        margin: 10px auto;
-		width:90%;
-        justify-content: center;
-      }
+<style>
+section#view_main {
+	display: flex;
+	margin: 10px auto;
+	width: 90%;
+	justify-content: center;
+}
 
-      article {
-        width: 40%;
-        margin: 10px;
-      }
+article {
+	width: 40%;
+	margin: 10px;
+}
 
-      #pro_info h3,
-      #pro_info p {
-        display: inline-block;
-        padding: 8px;
-        margin: 8px 4px;
-        border-bottom: 2px solid #ccc;
-      }
+#pro_info h3, #pro_info p {
+	display: inline-block;
+	padding: 8px;
+	margin: 8px 4px;
+	border-bottom: 2px solid #ccc;
+}
 
-      #pro_info h3 {
-        background-color: #dddddd;
-        color: blue;
-        font-weight: bold;
-        text-align: right;
-        border-bottom: 2px solid #dddddd;
-      }
+#pro_info h3 {
+	background-color: #dddddd;
+	color: blue;
+	font-weight: bold;
+	text-align: right;
+	border-bottom: 2px solid #dddddd;
+}
 
-      #pro_info p {
-        width: 60%;
-      }
-    </style>
+#pro_info p {
+	width: 60%;
+}
+</style>
+<script>
+	$(function(){
+		$("#pro_delete").click(function(){
+			
+			if(confirm("${PRO_VO.p_name}\n 상품데이터를 삭제합니다.")) {
+				/*
+					href history 기능
+					weh서핑 할때 사용자가 href 등을 클릭해서 페이지 전환하였다가 이전을 누르면
+					되돌아 가기 기능이 있다
+					location.href는 이전 화면을 history에 저장한 후 다음 화면으로 전환을 하여 뒤로가기를
+					눌렀을 때 이전화면을 복원해주는 기능이 포함되어 있다. 
+					
+					location.replace() 는 이전화면을 history에 저장하지 말고 다음화면을 현재화면과 겹치도록 열어라 ..
+					뒤로가기를 눌렀을 때 이전화면이 복원되지 않는다. 
+				
+				*/
+				// document.location.href ="${rootPath}/product/delete?id=${PRO_VO.p_code}"
+				document.location.replace("${rootPath}/product/delete?id=${PRO_VO.p_code}") // replace 함수
+				//삭제하고 뒤로 가기 눌렀을 때 삭제된 사진 다시 안뜨게 하는 기능
+			}
+		})
+		
+	})
+	
+</script>
 <section id="view_main">
 	<article id="pro_image">
-		<img src="${rootPath}/static/images/샌드위치.jpg" width="100%" alt="상품메인이미지"/>
+		<img src="${rootPath}/static/images/샌드위치.jpg" width="100%" alt="상품메인이미지" />
 	</article>
 	<article id="pro_info">
-		<h3>상품코드</h3><p>${PRO_VO.p_code}</p>
+		<h3>상품코드</h3>
+		<p>${PRO_VO.p_code}</p>
 		<br />
-		<h3>상품이름</h3><p>${PRO_VO.p_name}</p>
+		<h3>상품이름</h3>
+		<p>${PRO_VO.p_name}</p>
 		<br />
-		<h3>매입단가</h3><p>${PRO_VO.p_iprice}</p>
+		<h3>매입단가</h3>
+		<p>${PRO_VO.p_iprice}</p>
 		<br />
-		<h3>판매단가</h3><p>${PRO_VO.p_oprice}</p>
+		<h3>판매단가</h3>
+		<p>${PRO_VO.p_oprice}</p>
 		<br />
 	</article>
 </section>
+
+
+<hr >
+<style>
+hr {
+	border: 3px solid #ddd;
+	width:90%;
+	margin:0 auto;
+}
+
+#view_menu {
+	width: 90%;
+	margin: 10px;
+	text-align: right;
+}
+
+#view_menu a {
+	text-decoration: none;
+	display: inline-block;
+	padding: 8px 16px;
+	margin: 8px 4px;
+	background-color: aqua;
+	color:white;
+}
+
+
+#view_menu a:nth-child(1){
+	background-color: green;
+	 
+}
+
+
+#view_menu a:nth-child(3){
+	background-color: orange;
+	 
+}
+
+
+#view_menu a:hover {
+
+	background-color:#ddd;
+	color:black; 
+}
+</style>
+<section id="view_menu">
+	<a href="${rootPath}/product/">리스트</a>
+	 <a href="${rootPath}/product/update?id=${PRO_VO.p_code}">수정</a> 
+	 <a href="javascript:void(0)" id="pro_delete">삭제</a> <!-- a태그 클릭했을 때 url반응하지 말라 -->
+</section>
+<hr /> <!-- 닫는 태그!! -->
