--- a/SpMVC_ShopV2/src/main/webapp/WEB-INF/views/include/include-nav.jspf
+++ b/SpMVC_ShopV2/src/main/webapp/WEB-INF/views/include/include-nav.jspf
@@ -99,7 +99,7 @@
             	if(text== "상품관리"){
             		document.location.href = "${rootPath}/product/"
             	} else if(text == "거래처관리"){
-            		document.location.href = "${rootPath}/dept/list"
+            		document.location.href = "${rootPath}/dept/"
             	} else if(text == "Home"){
             		document.location.href = "${rootPath}/"
             	}
