--- a/SpMVC_ShopV2/src/main/webapp/static/css/input.css
+++ b/SpMVC_ShopV2/src/main/webapp/static/css/input.css
@@ -36,11 +36,11 @@
         }
         
         /*id selector 에 스타일 지정할 때는 원칙상 태그#id 형식으로 만들어야 하지만 #id만 사용하여도 문제없다. */
-        input#p_code {
+        input.m_code {
         	width:50%;
         }
         
-        button#p_code_gen {
+        button.m_code_gen {
         	display:inline-block;
         	padding:8px 16px;
         	background-color: orange;
@@ -53,7 +53,7 @@
         예를 들면 :hover, nth-child()
         CSS3에서 본격적으로 지원하는 셀렉터 기능으로 기본 태그, 클래스 아이디 등을 확장하여 Js로 구현하던 다양한 기능을 
         CSS3만으로 구현할 수 있다. 확장 셀렉터들!*/
-        button#p_code_gen:hover {
+        button#p_code_gen:hover, button#p_code_gen:hover {
         	background-color: #ddd;
         	color:black;
         
