--- a/SpMVC_ReadBook/src/main/webapp/static/css/index.css
+++ b/SpMVC_ReadBook/src/main/webapp/static/css/index.css
@@ -61,6 +61,15 @@ nav#main-nav {
   color: blue;
 }
 
+/*button이 가지고 있는 고유한 모양을 모두 제거 */
+#main-nav button {
+  background: transparent;
+  color: inherit;
+  border: 0;
+  outline: none;
+  cursor: pointer;
+}
+
 #main-nav ul li:first-child {
   font-size: 16px;
   font-weight: 900;
